# generic_ros_api

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  README.md  package.xml  ros_interface_layer.md
harness/: ros_com_interface_harness.cpp
src/: OSALThread.cpp  OSALThread.h  ROSComManager.cpp  ROSComManager.h  ROSMsgReceiver.h  ROSMsgSender.cpp  ROSMsgSender.h  RosComFrameworkVersion.h.in  RosDataHandle.h  RosDataHandleBase.h  RosDataSubscribeHandle.h  SynchronisedQueue.h  TopicPool.h
